--- a/styles/globals.css
+++ b/styles/globals.css
@@ -54,6 +54,25 @@ body {
   margin-left: auto;
   margin-right: auto;
 }
+.image-div{
+  position: relative;
+  object-fit: contain;
+}
+
+.main__container{
+  max-width: 1920px;
+  margin-left: auto;
+  margin-right: auto;
+  overflow-x: hidden;
+}
+
+.image_container> span{
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+
 
 @keyframes fade {
   from {
